@@ -179,8 +179,13 @@ balsa_mime_widget_new_text(BalsaMessage * bm, LibBalsaMessageBody * mime_body,
 
     /* configure text or source view */
     gtk_text_view_set_editable(GTK_TEXT_VIEW(mw->widget), FALSE);
+#if GTK_MR_236_IS_MERGED
     gtk_text_view_set_left_margin(GTK_TEXT_VIEW(mw->widget),  BALSA_LEFT_MARGIN);
     gtk_text_view_set_right_margin(GTK_TEXT_VIEW(mw->widget), BALSA_RIGHT_MARGIN);
+#else  /* GTK_MR_236_IS_MERGED */
+    gtk_widget_set_margin_start(mw->widget, BALSA_LEFT_MARGIN);
+    gtk_widget_set_margin_end(mw->widget, BALSA_RIGHT_MARGIN);
+#endif /* GTK_MR_236_IS_MERGED */
     gtk_text_view_set_wrap_mode(GTK_TEXT_VIEW(mw->widget), GTK_WRAP_WORD_CHAR);
 
     /* set the message font */
